add bootstrap5 and header with nav dark mode using javaScript

--- a/index.html
+++ b/index.html
@@ -1,15 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/sass/style.css">
-  <title>MamunWorld</title>
-</head>
-<body>
-  <header>
-    
-  </header>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- favicon -->
+    <link
+      rel="shortcut icon"
+      href="./assets/images/favicon.ico"
+      type="image/x-icon"
+    />
+    <!-- bootstrap5 -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <!-- main styles -->
+    <link rel="stylesheet" href="./assets/sass/style.css" />
+    <title>MamunWorld</title>
+  </head>
+  <body>
+    <!-- start header area -->
+    <header>
+      <!-- start navbar -->
+      <nav
+        class="navbar navbar-expand-lg navbar-light bg-light border-bottom sticky-top"
+      >
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/"
+            ><img
+              src="./assets/images/logo-for-white-mode.svg"
+              alt="logo"
+              width="120"
+              id="logo"
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link1</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link2</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link3</a>
+              </li>
+            </ul>
+            <div class="d-flex form-check form-switch">
+              <input
+                class="form-check-input"
+                type="checkbox"
+                id="darkLightCheckChecked"
+              />
+            </div>
+          </div>
+        </div>
+      </nav>
+      <!-- end navbar -->
+      <!-- start hero section -->
+      <div class="container my-5">
+        <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center">
+          <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
+            <div class="lc-block mb-3">
+              <div editable="rich">
+                <h2 class="fw-bold display-4">
+                  Border hero with cropped image and shadows&nbsp;
+                  <p></p>
+                  <p></p>
+                </h2>
+              </div>
+            </div>
+
+            <div class="lc-block mb-3">
+              <div editable="rich">
+                <p class="lead">
+                  Quickly design and customize responsive mobile-first sites
+                  with Bootstrap, the world’s most popular front-end open source
+                  toolkit, featuring Sass variables and mixins, responsive grid
+                  system, extensive prebuilt components, and powerful JavaScript
+                  plugins.
+                </p>
+              </div>
+            </div>
+
+            <div
+              class="lc-block d-grid gap-2 d-md-flex justify-content-md-start"
+            >
+              <a class="btn btn-primary px-4 me-md-2" href="#" role="button"
+                >Click me, I'm a button</a
+              >
+              <a class="btn btn-outline-secondary px-4" href="#" role="button"
+                >Click me, I'm a button</a
+              >
+            </div>
+          </div>
+          <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
+            <div class="lc-block text-center">
+              <img
+                class="rounded-start"
+                src="./assets/images/mamun-world-hero-section-profile.png"
+                alt="Photo by Diego PH"
+                width="400"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- end hero section -->
+    </header>
+    <!-- end header area -->
+
+    <!-- bootstrap5 script -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+    <!-- app (main) script file -->
+    <script src="./assets/js/app.js"></script>
+  </body>
 </html>
