--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
     <!-- main styles -->
     <link rel="stylesheet" href="./assets/sass/style.css" />
-    <title>MamunWorld</title>
+    <title>MamunWorld and sheik-mostafizur</title>
   </head>
   <body>
     <!-- start header area -->
