--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       href="./assets/images/favicon.ico"
       type="image/x-icon"
     />
+    <!-- fontawesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- bootstrap5 -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -80,21 +82,22 @@
             <div class="lc-block mb-3">
               <div editable="rich">
                 <h2 class="fw-bold display-4">
-                  Border hero with cropped image and shadows&nbsp;
-                  <p></p>
-                  <p></p>
+                  Hi, I’m 
                 </h2>
+                <p class="fw-bold display-5">Abdullah Al Mamun</p>
+                  <p class="display-6">
+                    a Developer. Professional Coder. UI/UX Designer.&nbsp;
+                  </p>
               </div>
             </div>
 
-            <div class="lc-block mb-3">
+            <div class="lc-block mb-5">
               <div editable="rich">
                 <p class="lead">
-                  Quickly design and customize responsive mobile-first sites
-                  with Bootstrap, the world’s most popular front-end open source
-                  toolkit, featuring Sass variables and mixins, responsive grid
-                  system, extensive prebuilt components, and powerful JavaScript
-                  plugins.
+                  I use animation as a third dimension by which to simplify
+                  experiences and kuiding thro each and every interaction. I’m
+                  not adding motion just to spruce things up, but doing it in
+                  ways that.
                 </p>
               </div>
             </div>
@@ -102,12 +105,13 @@
             <div
               class="lc-block d-grid gap-2 d-md-flex justify-content-md-start"
             >
-              <a class="btn btn-primary px-4 me-md-2" href="#" role="button"
-                >Click me, I'm a button</a
-              >
-              <a class="btn btn-outline-secondary px-4" href="#" role="button"
-                >Click me, I'm a button</a
-              >
+              <a class="btn btn-outline-secondary px-4" href="#">
+                <i class="fa-brands fa-facebook"></i>
+              </a>
+              <a class="btn btn-outline-secondary px-4" href="#">
+                <i class="fa-brands fa-wordpress"></i></a>
+              <a class="btn btn-outline-secondary px-4" href="#">
+                <i class="fa-solid fa-database"></i></a>
             </div>
           </div>
           <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
