--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
       type="image/x-icon"
     />
     <!-- fontawesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- bootstrap5 -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -76,46 +82,38 @@
       </nav>
       <!-- end navbar -->
       <!-- start hero section -->
-      <div class="container my-5">
-        <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center">
+      <div class="container">
+        <div class="row my-5 p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center">
           <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-            <div class="lc-block mb-3">
-              <div editable="rich">
-                <h2 class="fw-bold display-4">
-                  Hi, I’m 
-                </h2>
-                <p class="fw-bold display-5">Abdullah Al Mamun</p>
-                  <p class="display-6">
-                    a Developer. Professional Coder. UI/UX Designer.&nbsp;
-                  </p>
-              </div>
+            <div class="mb-3">
+              <h2 class="fw-bold display-4">Hi, I'm</h2>
+              <p class="fw-bold display-5">Abdullah Al Mamun</p>
+              <p class="display-6">
+                a Developer. Professional Coder. UI/UX Designer.&nbsp;
+              </p>
             </div>
-
-            <div class="lc-block mb-5">
-              <div editable="rich">
-                <p class="lead">
-                  I use animation as a third dimension by which to simplify
-                  experiences and kuiding thro each and every interaction. I’m
-                  not adding motion just to spruce things up, but doing it in
-                  ways that.
-                </p>
-              </div>
+            <div class="mb-5">
+              <p class="lead">
+                I use animation as a third dimension by which to simplify
+                experiences and kuiding thro each and every interaction. I'm not
+                adding motion just to spruce things up, but doing it in ways
+                that.
+              </p>
             </div>
-
-            <div
-              class="lc-block d-grid gap-2 d-md-flex justify-content-md-start"
-            >
-              <a class="btn btn-outline-secondary px-4" href="#">
+            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+              <a class="btn btn-outline-secondary px-4 fs-3" href="#">
                 <i class="fa-brands fa-facebook"></i>
               </a>
-              <a class="btn btn-outline-secondary px-4" href="#">
-                <i class="fa-brands fa-wordpress"></i></a>
-              <a class="btn btn-outline-secondary px-4" href="#">
-                <i class="fa-solid fa-database"></i></a>
+              <a class="btn btn-outline-secondary px-4 fs-3" href="#">
+                <i class="fa-brands fa-wordpress"></i
+              ></a>
+              <a class="btn btn-outline-secondary px-4 fs-3" href="#">
+                <i class="fa-solid fa-database"></i
+              ></a>
             </div>
           </div>
           <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-            <div class="lc-block text-center">
+            <div class="text-center">
               <img
                 class="rounded-start"
                 src="./assets/images/mamun-world-hero-section-profile.png"
@@ -129,6 +127,187 @@
       <!-- end hero section -->
     </header>
     <!-- end header area -->
+
+    <!-- portfolio section start -->
+    <section id="portfolio">
+      <div class="container">
+        <h2 class="text-center mt-5 py-5 fw-bold display-5">My Portfolio</h2>
+        <div class="row">
+          <div class="col-md-4 col-sm-6 mb-4">
+            <a href="#" target="_blank"
+              ><div class="card shadow">
+                <img
+                  src="./assets/images/portfolio_image.png"
+                  class="card-img-top"
+                  alt="portfolio image"
+                />
+                <div class="card-footer">
+                  <p class="card-text text-dark">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
+              </div></a
+            >
+          </div>
+          <div class="col-md-4 col-sm-6 mb-4">
+            <a href="#" target="_blank"
+              ><div class="card shadow">
+                <img
+                  src="./assets/images/portfolio_image.png"
+                  class="card-img-top"
+                  alt="portfolio image"
+                />
+                <div class="card-footer">
+                  <p class="card-text text-dark">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
+              </div></a
+            >
+          </div>
+          <div class="col-md-4 col-sm-6 mb-4">
+            <a href="#" target="_blank"
+              ><div class="card shadow">
+                <img
+                  src="./assets/images/portfolio_image.png"
+                  class="card-img-top"
+                  alt="portfolio image"
+                />
+                <div class="card-footer">
+                  <p class="card-text text-dark">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
+              </div></a
+            >
+          </div>
+          <div class="col-md-4 col-sm-6 mb-4">
+            <a href="#" target="_blank"
+              ><div class="card shadow">
+                <img
+                  src="./assets/images/portfolio_image.png"
+                  class="card-img-top"
+                  alt="portfolio image"
+                />
+                <div class="card-footer">
+                  <p class="card-text text-dark">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
+              </div></a
+            >
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- portfolio section end -->
+
+    <!-- contact with me section start -->
+    <section id="contact">
+      <div class="container">
+        <h2 class="text-center mt-5 py-5 fw-bold display-5">Contact With Me</h2>
+        <div class="row">
+          <div class="col-md-4 shadow p-3">
+            <img
+              class="img-fluid rounded-start"
+              src="./assets/images/contact-image.png"
+              alt="Photo by Diego PH"
+            />
+            <h4 class="mt-3">Softwere Developrer</h4>
+            <p class="txt_con">
+              I am available for Remote work.<br />
+              Connect with me via and call in to my account.<br />
+            </p>
+            <p>FIND WITH ME</p>
+
+            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+              <a class="btn btn-outline-secondary px-3 fs-4" href="#">
+                <i class="fa-brands fa-facebook"></i>
+              </a>
+              <a class="btn btn-outline-secondary px-3 fs-4" href="#">
+                <i class="fa-brands fa-linkedin"></i
+              ></a>
+              <a class="btn btn-outline-secondary px-3 fs-4" href="#">
+                <i class="fa-solid fa-envelope"></i
+              ></a>
+              <a class="btn btn-outline-secondary px-3 fs-4" href="#">
+                <i class="fa-brands fa-skype"></i
+              ></a>
+            </div>
+          </div>
+          <div class="col-md-8">
+            <div class="shadow ms-3 p-3">
+              <form>
+                <!-- <div class="offset-lg-1 p-5 overflow-hidden shadow-lg col mt-3"> -->
+                <div class="row">
+                  <div class="col mt-4">
+                    <label for="first_name">First name</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      placeholder="First name"
+                      id="first_name"
+                    />
+                  </div>
+
+                  <div class="col mt-4">
+                    <label for="last_name">Last name</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      placeholder="Last name"
+                      id="last_name"
+                    />
+                  </div>
+
+                  <div class="form-group mt-4">
+                    <label for="inputEmail">Email</label>
+                    <input type="text" class="form-control" id="inputEmail" />
+                  </div>
+
+                  <div class="form-group mt-4">
+                    <label for="inputAddress">Address</label>
+                    <input type="text" class="form-control" id="inputAddress" />
+                  </div>
+
+                  <div class="form-group mt-4">
+                    <label for="inputMess">Messege</label>
+                    <textarea
+                      class="form-control"
+                      id="inputMess"
+                      rows="3"
+                    ></textarea>
+                  </div>
+                </div>
+                <button
+                  type="submit"
+                  class="btn btn-primary btn-lg btn-block mt-4"
+                >
+                  Send
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- contact with me section end -->
+
+    <!-- footer area start -->
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col mt-5 py-5">
+            <p class="display-1 text-center">Footer Area</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- footer area end -->
 
     <!-- bootstrap5 script -->
     <script
