--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <header>
       <!-- start navbar -->
       <nav
-        class="navbar navbar-expand-lg navbar-light bg-light border-bottom sticky-top"
+        class="navbar navbar-expand-lg navbar-light bg-light border-bottom fixed-top"
       >
         <div class="container-fluid">
           <a class="navbar-brand" href="/"
@@ -43,6 +43,7 @@
               alt="logo"
               width="120"
               id="logo"
+              class="logo_wite_mode"
           /></a>
           <button
             class="navbar-toggler"
@@ -61,20 +62,20 @@
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link1</a>
+                <a class="nav-link" href="#portfolio">Portfolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link2</a>
+                <a class="nav-link" href="#">Resume</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link3</a>
+                <a class="nav-link" href="#contact">Contracts</a>
               </li>
             </ul>
             <div class="d-flex form-check form-switch">
               <input
                 class="form-check-input"
                 type="checkbox"
-                id="darkLightCheckChecked"
+                id="lightSwitch"
               />
             </div>
           </div>
@@ -84,7 +85,7 @@
       <!-- start hero section -->
       <div class="container">
         <div class="row my-5 p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center">
-          <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
+          <div class="col-lg-7 p-3 p-lg-5 pt-lg-3 mb-lg-0 mb-md-5">
             <div class="mb-3">
               <h2 class="fw-bold display-4">Hi, I'm</h2>
               <p class="fw-bold display-5">Abdullah Al Mamun</p>
@@ -129,11 +130,11 @@
     <!-- end header area -->
 
     <!-- portfolio section start -->
-    <section id="portfolio">
+    <section id="portfolio" class="py-md-5">
       <div class="container">
-        <h2 class="text-center mt-5 py-5 fw-bold display-5">My Portfolio</h2>
+        <h2 class="text-center pb-5 fw-bold display-5">My Portfolio</h2>
         <div class="row">
-          <div class="col-md-4 col-sm-6 mb-4">
+          <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
             <a href="#" target="_blank"
               ><div class="card shadow">
                 <img
@@ -150,7 +151,7 @@
               </div></a
             >
           </div>
-          <div class="col-md-4 col-sm-6 mb-4">
+          <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
             <a href="#" target="_blank"
               ><div class="card shadow">
                 <img
@@ -167,7 +168,7 @@
               </div></a
             >
           </div>
-          <div class="col-md-4 col-sm-6 mb-4">
+          <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
             <a href="#" target="_blank"
               ><div class="card shadow">
                 <img
@@ -184,7 +185,7 @@
               </div></a
             >
           </div>
-          <div class="col-md-4 col-sm-6 mb-4">
+          <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
             <a href="#" target="_blank"
               ><div class="card shadow">
                 <img
@@ -207,11 +208,11 @@
     <!-- portfolio section end -->
 
     <!-- contact with me section start -->
-    <section id="contact">
+    <section id="contact" class="py-md-5">
       <div class="container">
-        <h2 class="text-center mt-5 py-5 fw-bold display-5">Contact With Me</h2>
+        <h2 class="text-center pb-5 fw-bold display-5">Contact With Me</h2>
         <div class="row">
-          <div class="col-md-4 shadow p-3">
+          <div class="col-lg-4 col-md-5 shadow p-3">
             <img
               class="img-fluid rounded-start"
               src="./assets/images/contact-image.png"
@@ -239,7 +240,7 @@
               ></a>
             </div>
           </div>
-          <div class="col-md-8">
+          <div class="col-lg-8 col-md-7">
             <div class="shadow ms-3 p-3">
               <form>
                 <!-- <div class="offset-lg-1 p-5 overflow-hidden shadow-lg col mt-3"> -->
@@ -298,11 +299,63 @@
     <!-- contact with me section end -->
 
     <!-- footer area start -->
-    <footer>
+    <footer class="pt-md-5 mt-md-5 pb-md-4 border-top">
       <div class="container">
         <div class="row">
-          <div class="col mt-5 py-5">
-            <p class="display-1 text-center">Footer Area</p>
+          <div class="col-lg-3 col-md-6 mb-lg-0 mb-md-5">
+            <a href="#"
+              ><img
+                src="./assets/images/logo-for-white-mode.svg"
+                alt="Logo"
+                width="150"
+                class="mb-4 logo_wite_mode"
+            /></a>
+            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+              <a class="btn btn-outline-secondary px-3 fs-5" href="#">
+                <i class="fa-brands fa-facebook"></i>
+              </a>
+              <a class="btn btn-outline-secondary px-3 fs-5" href="#">
+                <i class="fa-brands fa-linkedin"></i
+              ></a>
+              <a class="btn btn-outline-secondary px-3 fs-5" href="#">
+                <i class="fa-solid fa-envelope"></i
+              ></a>
+              <a class="btn btn-outline-secondary px-3 fs-5" href="#">
+                <i class="fa-brands fa-skype"></i
+              ></a>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-lg-0 mb-md-5">
+            <h5 class="mb-3 fw-bold">Quick Links</h5>
+            <div>
+              <a href="#" class="d-block my-2 text-secondary">Get Started</a>
+              <a href="#" class="d-block my-2 text-secondary">About</a>
+              <a href="#portfolio" class="d-block my-2 text-secondary"
+                >Portfolio</a
+              >
+              <a href="#contact" class="d-block my-2 text-secondary">Contact</a>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <h5 class="mb-3 fw-bold">RESOURCES</h5>
+            <a href="#" class="d-block my-2 text-secondary">System Status</a>
+            <a href="#" class="d-block my-2 text-secondary">Terms Of Service</a>
+            <a href="#" class="d-block my-2 text-secondary">Pricing</a>
+            <a href="#" class="d-block my-2 text-secondary">Services</a>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <h5 class="mb-3 fw-bold">DEVELOPERS</h5>
+            <a href="#" class="d-block my-2 text-secondary">Documentation</a>
+            <a href="#" class="d-block my-2 text-secondary">Support</a>
+            <a href="#" class="d-block my-2 text-secondary">Authentication</a>
+            <a href="#" class="d-block my-2 text-secondary">Open Source</a>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <p class="text-center mt-5">©2022. All rights reserved by Mamun.</p>
           </div>
         </div>
       </div>
@@ -315,6 +368,8 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <!-- switch for dark mode -->
+    <script src="./assets/js/switch.js"></script>
     <!-- app (main) script file -->
     <script src="./assets/js/app.js"></script>
   </body>
