--- a/index.html
+++ b/index.html
@@ -8,23 +8,20 @@
     <link
       rel="shortcut icon"
       href="./assets/images/favicon.ico"
-      type="image/x-icon"
-    />
+      type="image/x-icon" />
     <!-- fontawesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+      referrerpolicy="no-referrer" />
     <!-- bootstrap5 -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous" />
     <!-- main styles -->
     <link rel="stylesheet" href="./assets/sass/style.css" />
     <title>MamunWorld Portfolio</title>
@@ -34,8 +31,7 @@
     <header>
       <!-- start navbar -->
       <nav
-        class="navbar navbar-expand-lg navbar-light bg-light border-bottom fixed-top"
-      >
+        class="navbar navbar-expand-lg navbar-light bg-light border-bottom fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="/"
             ><img
@@ -52,8 +48,7 @@
             data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent"
             aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -75,8 +70,7 @@
               <input
                 class="form-check-input"
                 type="checkbox"
-                id="lightSwitch"
-              />
+                id="lightSwitch" />
             </div>
           </div>
         </div>
@@ -119,8 +113,7 @@
                 class="rounded-start"
                 src="./assets/images/mamun-world-hero-section-profile.png"
                 alt="Photo by Diego PH"
-                width="400"
-              />
+                width="400" />
             </div>
           </div>
         </div>
@@ -140,8 +133,7 @@
                 <img
                   src="./assets/images/portfolio_image.png"
                   class="card-img-top"
-                  alt="portfolio image"
-                />
+                  alt="portfolio image" />
                 <div class="card-footer">
                   <p class="card-text text-dark">
                     Some quick example text to build on the card title and make
@@ -157,8 +149,7 @@
                 <img
                   src="./assets/images/portfolio_image.png"
                   class="card-img-top"
-                  alt="portfolio image"
-                />
+                  alt="portfolio image" />
                 <div class="card-footer">
                   <p class="card-text text-dark">
                     Some quick example text to build on the card title and make
@@ -174,8 +165,7 @@
                 <img
                   src="./assets/images/portfolio_image.png"
                   class="card-img-top"
-                  alt="portfolio image"
-                />
+                  alt="portfolio image" />
                 <div class="card-footer">
                   <p class="card-text text-dark">
                     Some quick example text to build on the card title and make
@@ -191,8 +181,7 @@
                 <img
                   src="./assets/images/portfolio_image.png"
                   class="card-img-top"
-                  alt="portfolio image"
-                />
+                  alt="portfolio image" />
                 <div class="card-footer">
                   <p class="card-text text-dark">
                     Some quick example text to build on the card title and make
@@ -207,6 +196,265 @@
     </section>
     <!-- portfolio section end -->
 
+    <!-- my_resume section start -->
+    <section id="my_resume" class="py-md-5">
+      <div class="container">
+        <h2 class="text-center pb-5 fw-bold display-5">My Resume</h2>
+        <div class="row">
+          <div class="col-md-4">
+            <h2
+              class="text-center shadow py-3 fw-bold resume_btn"
+              role="button">
+              Professional Skills
+            </h2>
+          </div>
+          <div class="col-md-4">
+            <h2
+              class="text-center shadow py-3 fw-bold resume_btn"
+              role="button">
+              Experiences
+            </h2>
+          </div>
+          <div class="col-md-4">
+            <h2
+              class="text-center shadow py-3 fw-bold resume_btn"
+              role="button">
+              Education
+            </h2>
+          </div>
+        </div>
+        <!-- show resume -->
+        <div id="resume_show">
+          <!-- skill start -->
+          <div class="row mt-3">
+            <div class="col-md-6">
+              <div class="shadow p-5">
+                <h3>Frontend Skill</h3>
+                <div class="mb-3">
+                  <div class="labels">
+                    <span>HTML5</span>
+                    <span>95%</span>
+                  </div>
+                  <div class="progress">
+                    <div
+                      class="progress-bar"
+                      role="progressbar"
+                      aria-valuenow="60"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                      style="width: 95%"></div>
+                  </div>
+                </div>
+                <div class="mb-3">
+                  <div class="labels">
+                    <span>CSS</span>
+                    <span>80%</span>
+                  </div>
+                  <div class="progress">
+                    <div
+                      class="progress-bar"
+                      role="progressbar"
+                      aria-valuenow="60"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                      style="width: 80%"></div>
+                  </div>
+                </div>
+                <div class="mb-3">
+                  <div class="labels">
+                    <span>Bootstrap5</span>
+                    <span>85%</span>
+                  </div>
+                  <div class="progress">
+                    <div
+                      class="progress-bar"
+                      role="progressbar"
+                      aria-valuenow="60"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                      style="width: 85%"></div>
+                  </div>
+                </div>
+                <div class="mb-3">
+                  <div class="labels">
+                    <span>JavaScript</span>
+                    <span>75%</span>
+                  </div>
+                  <div class="progress">
+                    <div
+                      class="progress-bar"
+                      role="progressbar"
+                      aria-valuenow="60"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                      style="width: 75%"></div>
+                  </div>
+                </div>
+                <div class="mb-3">
+                  <div class="labels">
+                    <span>WordPress</span>
+                    <span>95%</span>
+                  </div>
+                  <div class="progress">
+                    <div
+                      class="progress-bar"
+                      role="progressbar"
+                      aria-valuenow="60"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                      style="width: 95%"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="shadow p-5">
+                <h3>Backend Skill</h3>
+                <div class="mb-3">
+                  <div class="labels">
+                    <span>SQL</span>
+                    <span>95%</span>
+                  </div>
+                  <div class="progress">
+                    <div
+                      class="progress-bar"
+                      role="progressbar"
+                      aria-valuenow="60"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                      style="width: 95%"></div>
+                  </div>
+                </div>
+                <div class="mb-3">
+                  <div class="labels">
+                    <span>Mysql</span>
+                    <span>90%</span>
+                  </div>
+                  <div class="progress">
+                    <div
+                      class="progress-bar"
+                      role="progressbar"
+                      aria-valuenow="60"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                      style="width: 90%"></div>
+                  </div>
+                </div>
+                <div class="mb-3">
+                  <div class="labels">
+                    <span>PLSQL</span>
+                    <span>85%</span>
+                  </div>
+                  <div class="progress">
+                    <div
+                      class="progress-bar"
+                      role="progressbar"
+                      aria-valuenow="60"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                      style="width: 85%"></div>
+                  </div>
+                </div>
+                <div class="mb-3">
+                  <div class="labels">
+                    <span>SQL Server</span>
+                    <span>85%</span>
+                  </div>
+                  <div class="progress">
+                    <div
+                      class="progress-bar"
+                      role="progressbar"
+                      aria-valuenow="60"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                      style="width: 85%"></div>
+                  </div>
+                </div>
+                <div class="mb-3">
+                  <div class="labels">
+                    <span>C</span>
+                    <span>60%</span>
+                  </div>
+                  <div class="progress">
+                    <div
+                      class="progress-bar"
+                      role="progressbar"
+                      aria-valuenow="60"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                      style="width: 60%"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- skill end -->
+
+          <!-- experiences start -->
+          <div class="row mt-3 d-none">
+            <div class="col-md-6">
+              <div class="shadow p-5">
+                <h3>Assistant Programmer, IT</h3>
+                <p>
+                  STAR Porcelain Limited <br />
+                  02-04-2022 To Continuing
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="shadow p-5">
+                <h3>Junior Software Developer</h3>
+                <p>SYP Solutions LTD <br />01-07-2021 To 31-03-2022</p>
+              </div>
+            </div>
+          </div>
+          <!-- experiences end -->
+
+          <!-- education start -->
+          <div class="row mt-3 d-none">
+            <div class="col-md-6">
+              <div class="shadow p-5">
+                <h3>MSc in Computer Science</h3>
+                <p>Cumilla University(Running)</p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="shadow p-5">
+                <h3>Diploma in Computer Science</h3>
+                <p>IsDB-BISEW</p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="shadow p-5">
+                <h3>Masters of Arts</h3>
+                <p>Jagannath University</p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="shadow p-5">
+                <h3>Bachelor of Arts</h3>
+                <p>Jagannath University</p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="shadow p-5">
+                <h3>Higher Secondary Education</h3>
+                <p>Gov. Madrasah-E-Alia</p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="shadow p-5">
+                <h3>Secondary School Education</h3>
+                <p>Alamadanga Sidiqua Alim Madrasah</p>
+              </div>
+            </div>
+          </div>
+          <!-- education end -->
+        </div>
+      </div>
+    </section>
+    <!-- my_resume section end -->
+
     <!-- contact with me section start -->
     <section id="contact" class="py-md-5">
       <div class="container">
@@ -216,8 +464,7 @@
             <img
               class="img-fluid rounded-start"
               src="./assets/images/contact-image.png"
-              alt="Photo by Diego PH"
-            />
+              alt="Photo by Diego PH" />
             <h4 class="mt-3">Softwere Developrer</h4>
             <p class="txt_con">
               I am available for Remote work.<br />
@@ -251,8 +498,7 @@
                       type="text"
                       class="form-control"
                       placeholder="First name"
-                      id="first_name"
-                    />
+                      id="first_name" />
                   </div>
 
                   <div class="col mt-4">
@@ -261,8 +507,7 @@
                       type="text"
                       class="form-control"
                       placeholder="Last name"
-                      id="last_name"
-                    />
+                      id="last_name" />
                   </div>
 
                   <div class="form-group mt-4">
@@ -280,14 +525,12 @@
                     <textarea
                       class="form-control"
                       id="inputMess"
-                      rows="3"
-                    ></textarea>
+                      rows="3"></textarea>
                   </div>
                 </div>
                 <button
                   type="submit"
-                  class="btn btn-primary btn-lg btn-block mt-4"
-                >
+                  class="btn btn-primary btn-lg btn-block mt-4">
                   Send
                 </button>
               </form>
@@ -366,8 +609,7 @@
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <!-- switch for dark mode -->
     <script src="./assets/js/switch.js"></script>
     <!-- app (main) script file -->
