--- a/index.html
+++ b/index.html
@@ -8,20 +8,23 @@
     <link
       rel="shortcut icon"
       href="./assets/images/favicon.ico"
-      type="image/x-icon" />
+      type="image/x-icon"
+    />
     <!-- fontawesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous"
-      referrerpolicy="no-referrer" />
+      referrerpolicy="no-referrer"
+    />
     <!-- bootstrap5 -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous" />
+      crossorigin="anonymous"
+    />
     <!-- main styles -->
     <link rel="stylesheet" href="./assets/sass/style.css" />
     <title>MamunWorld Portfolio</title>
@@ -31,7 +34,8 @@
     <header>
       <!-- start navbar -->
       <nav
-        class="navbar navbar-expand-lg navbar-light bg-light border-bottom fixed-top">
+        class="navbar navbar-expand-lg navbar-light bg-light border-bottom fixed-top"
+      >
         <div class="container-fluid">
           <a class="navbar-brand" href="/"
             ><img
@@ -48,7 +52,8 @@
             data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent"
             aria-expanded="false"
-            aria-label="Toggle navigation">
+            aria-label="Toggle navigation"
+          >
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -70,7 +75,8 @@
               <input
                 class="form-check-input"
                 type="checkbox"
-                id="lightSwitch" />
+                id="lightSwitch"
+              />
             </div>
           </div>
         </div>
@@ -96,14 +102,23 @@
               </p>
             </div>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-              <a class="btn btn-outline-secondary px-4 fs-3" href="#">
+              <a
+                class="btn btn-outline-secondary px-4 fs-3"
+                href="https://www.facebook.com/Mamunjnu6"
+              >
                 <i class="fa-brands fa-facebook"></i>
               </a>
-              <a class="btn btn-outline-secondary px-4 fs-3" href="#">
-                <i class="fa-brands fa-wordpress"></i
+              <a
+                class="btn btn-outline-secondary px-4 fs-3"
+                href="https://github.com/mamunddd"
+              >
+                <i class="fa-brands fa fa-github"></i
               ></a>
-              <a class="btn btn-outline-secondary px-4 fs-3" href="#">
-                <i class="fa-solid fa-database"></i
+              <a
+                class="btn btn-outline-secondary px-4 fs-3"
+                href="https://www.linkedin.com/in/mamunjnu6/"
+              >
+                <i class="fa-brands fa-linkedin"></i
               ></a>
             </div>
           </div>
@@ -113,7 +128,8 @@
                 class="rounded-start"
                 src="./assets/images/mamun-world-hero-section-profile.png"
                 alt="Photo by Diego PH"
-                width="400" />
+                width="400"
+              />
             </div>
           </div>
         </div>
@@ -128,12 +144,35 @@
         <h2 class="text-center pb-5 fw-bold display-5">My Portfolio</h2>
         <div class="row">
           <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
-            <a href="#" target="_blank"
+            <a
+              href="http://apps.oracleapexservices.com/apexlb/r/apps11/pos179/home"
+              target="_blank"
               ><div class="card shadow">
                 <img
-                  src="./assets/images/portfolio_image.png"
+                  src="./assets/images/erp.png"
                   class="card-img-top"
-                  alt="portfolio image" />
+                  alt="portfolio image"
+                />
+                <div class="card-footer">
+                  <p class="card-text text-dark">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
+              </div></a
+            >
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
+            <a
+              href="https://apex.oracle.com/pls/apex/mamunddd/r/onlinebloodbank/home"
+              target="_blank"
+              ><div class="card shadow">
+                <img
+                  src="./assets/images/BloodBank.png"
+                  class="card-img-top"
+                  alt="portfolio image"
+                />
                 <div class="card-footer">
                   <p class="card-text text-dark">
                     Some quick example text to build on the card title and make
@@ -144,12 +183,15 @@
             >
           </div>
           <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
-            <a href="#" target="_blank"
+            <a
+              href="http://apps.oracleapexservices.com/apexlb/r/apps12/pos1/home"
+              target="_blank"
               ><div class="card shadow">
                 <img
-                  src="./assets/images/portfolio_image.png"
+                  src="./assets/images/POS.png"
                   class="card-img-top"
-                  alt="portfolio image" />
+                  alt="portfolio image"
+                />
                 <div class="card-footer">
                   <p class="card-text text-dark">
                     Some quick example text to build on the card title and make
@@ -159,13 +201,15 @@
               </div></a
             >
           </div>
+
           <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
             <a href="#" target="_blank"
               ><div class="card shadow">
                 <img
-                  src="./assets/images/portfolio_image.png"
+                  src="./assets/images/Leave.png"
                   class="card-img-top"
-                  alt="portfolio image" />
+                  alt="portfolio image"
+                />
                 <div class="card-footer">
                   <p class="card-text text-dark">
                     Some quick example text to build on the card title and make
@@ -175,13 +219,35 @@
               </div></a
             >
           </div>
+
           <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
-            <a href="#" target="_blank"
+            <a href="https://apps.starporcelainbd.com/" target="_blank"
               ><div class="card shadow">
                 <img
-                  src="./assets/images/portfolio_image.png"
+                  src="./assets/images/spl.png"
                   class="card-img-top"
-                  alt="portfolio image" />
+                  alt="portfolio image"
+                />
+                <div class="card-footer">
+                  <p class="card-text text-dark">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
+              </div></a
+            >
+          </div>
+
+          <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
+            <a
+              href="https://apex.oracle.com/pls/apex/r/mamunworld/book3129128/home"
+              target="_blank"
+              ><div class="card shadow">
+                <img
+                  src="./assets/images/book.png"
+                  class="card-img-top"
+                  alt="portfolio image"
+                />
                 <div class="card-footer">
                   <p class="card-text text-dark">
                     Some quick example text to build on the card title and make
@@ -204,21 +270,24 @@
           <div class="col-md-4">
             <h2
               class="text-center shadow py-3 fw-bold resume_btn"
-              role="button">
+              role="button"
+            >
               Professional Skills
             </h2>
           </div>
           <div class="col-md-4">
             <h2
               class="text-center shadow py-3 fw-bold resume_btn"
-              role="button">
+              role="button"
+            >
               Experiences
             </h2>
           </div>
           <div class="col-md-4">
             <h2
               class="text-center shadow py-3 fw-bold resume_btn"
-              role="button">
+              role="button"
+            >
               Education
             </h2>
           </div>
@@ -242,7 +311,8 @@
                       aria-valuenow="60"
                       aria-valuemin="0"
                       aria-valuemax="100"
-                      style="width: 95%"></div>
+                      style="width: 95%"
+                    ></div>
                   </div>
                 </div>
                 <div class="mb-3">
@@ -257,7 +327,8 @@
                       aria-valuenow="60"
                       aria-valuemin="0"
                       aria-valuemax="100"
-                      style="width: 80%"></div>
+                      style="width: 80%"
+                    ></div>
                   </div>
                 </div>
                 <div class="mb-3">
@@ -272,7 +343,8 @@
                       aria-valuenow="60"
                       aria-valuemin="0"
                       aria-valuemax="100"
-                      style="width: 85%"></div>
+                      style="width: 85%"
+                    ></div>
                   </div>
                 </div>
                 <div class="mb-3">
@@ -287,7 +359,8 @@
                       aria-valuenow="60"
                       aria-valuemin="0"
                       aria-valuemax="100"
-                      style="width: 75%"></div>
+                      style="width: 75%"
+                    ></div>
                   </div>
                 </div>
                 <div class="mb-3">
@@ -302,7 +375,8 @@
                       aria-valuenow="60"
                       aria-valuemin="0"
                       aria-valuemax="100"
-                      style="width: 95%"></div>
+                      style="width: 95%"
+                    ></div>
                   </div>
                 </div>
               </div>
@@ -322,7 +396,8 @@
                       aria-valuenow="60"
                       aria-valuemin="0"
                       aria-valuemax="100"
-                      style="width: 95%"></div>
+                      style="width: 95%"
+                    ></div>
                   </div>
                 </div>
                 <div class="mb-3">
@@ -337,7 +412,8 @@
                       aria-valuenow="60"
                       aria-valuemin="0"
                       aria-valuemax="100"
-                      style="width: 90%"></div>
+                      style="width: 90%"
+                    ></div>
                   </div>
                 </div>
                 <div class="mb-3">
@@ -352,7 +428,8 @@
                       aria-valuenow="60"
                       aria-valuemin="0"
                       aria-valuemax="100"
-                      style="width: 85%"></div>
+                      style="width: 85%"
+                    ></div>
                   </div>
                 </div>
                 <div class="mb-3">
@@ -367,7 +444,8 @@
                       aria-valuenow="60"
                       aria-valuemin="0"
                       aria-valuemax="100"
-                      style="width: 85%"></div>
+                      style="width: 85%"
+                    ></div>
                   </div>
                 </div>
                 <div class="mb-3">
@@ -382,7 +460,8 @@
                       aria-valuenow="60"
                       aria-valuemin="0"
                       aria-valuemax="100"
-                      style="width: 60%"></div>
+                      style="width: 60%"
+                    ></div>
                   </div>
                 </div>
               </div>
@@ -464,7 +543,8 @@
             <img
               class="img-fluid rounded-start"
               src="./assets/images/contact-image.png"
-              alt="Photo by Diego PH" />
+              alt="Photo by Diego PH"
+            />
             <h4 class="mt-3">Softwere Developrer</h4>
             <p class="txt_con">
               I am available for Remote work.<br />
@@ -498,7 +578,8 @@
                       type="text"
                       class="form-control"
                       placeholder="First name"
-                      id="first_name" />
+                      id="first_name"
+                    />
                   </div>
 
                   <div class="col mt-4">
@@ -507,7 +588,8 @@
                       type="text"
                       class="form-control"
                       placeholder="Last name"
-                      id="last_name" />
+                      id="last_name"
+                    />
                   </div>
 
                   <div class="form-group mt-4">
@@ -525,12 +607,14 @@
                     <textarea
                       class="form-control"
                       id="inputMess"
-                      rows="3"></textarea>
+                      rows="3"
+                    ></textarea>
                   </div>
                 </div>
                 <button
                   type="submit"
-                  class="btn btn-primary btn-lg btn-block mt-4">
+                  class="btn btn-primary btn-lg btn-block mt-4"
+                >
                   Send
                 </button>
               </form>
@@ -554,16 +638,28 @@
                 class="mb-4 logo_wite_mode"
             /></a>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-              <a class="btn btn-outline-secondary px-3 fs-5" href="#">
+              <a
+                class="btn btn-outline-secondary px-3 fs-5"
+                href="https://www.facebook.com/Mamunjnu6"
+              >
                 <i class="fa-brands fa-facebook"></i>
               </a>
-              <a class="btn btn-outline-secondary px-3 fs-5" href="#">
+              <a
+                class="btn btn-outline-secondary px-3 fs-5"
+                href="https://www.linkedin.com/in/mamunjnu6/"
+              >
                 <i class="fa-brands fa-linkedin"></i
               ></a>
-              <a class="btn btn-outline-secondary px-3 fs-5" href="#">
+              <a
+                class="btn btn-outline-secondary px-3 fs-5"
+                href="mamunddd44@gmail.com"
+              >
                 <i class="fa-solid fa-envelope"></i
               ></a>
-              <a class="btn btn-outline-secondary px-3 fs-5" href="#">
+              <a
+                class="btn btn-outline-secondary px-3 fs-5"
+                href="https://join.skype.com/invite/fB44iFLOaqLF"
+              >
                 <i class="fa-brands fa-skype"></i
               ></a>
             </div>
@@ -609,7 +705,8 @@
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"></script>
+      crossorigin="anonymous"
+    ></script>
     <!-- switch for dark mode -->
     <script src="./assets/js/switch.js"></script>
     <!-- app (main) script file -->
