--- a/index.html
+++ b/index.html
@@ -95,10 +95,15 @@
             </div>
             <div class="mb-5">
               <p class="lead">
-                I use animation as a third dimension by which to simplify
-                experiences and kuiding thro each and every interaction. I'm not
-                adding motion just to spruce things up, but doing it in ways
-                that.
+                To work as a Software Developer applying my knowledge in the
+                field of testing, designing, and maintenance to cater to the
+                specific needs of the people. I wish to work in a team of
+                motivated individuals who want to work towards advancing the
+                company and its goals. My passion is about implementing and
+                launching new projects. Strong in design and integration with
+                intuitive problem-solving skills. Proficient in SQL, PL/SQL,
+                MySQL, JAVASCRIPT, HTML, CSS, Bootstrap, Oracle Apex and
+                WordPress.
               </p>
             </div>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
@@ -145,7 +150,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
             <a
-              href="http://apps.oracleapexservices.com/apexlb/r/apps11/pos179/home"
+              href="http://orasoft.oracleapexservices.com/apex/r/orasoft61/pos179/login_desktop"
               target="_blank"
               ><div class="card shadow">
                 <img
@@ -154,10 +159,7 @@
                   alt="portfolio image"
                 />
                 <div class="card-footer">
-                  <p class="card-text text-dark">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
+                  <p class="card-text text-dark">Business Solutions (ERP).</p>
                 </div>
               </div></a
             >
@@ -175,8 +177,7 @@
                 />
                 <div class="card-footer">
                   <p class="card-text text-dark">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
+                    Online Blacd Bank Management System.
                   </p>
                 </div>
               </div></a
@@ -184,7 +185,7 @@
           </div>
           <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
             <a
-              href="http://apps.oracleapexservices.com/apexlb/r/apps12/pos1/home"
+              href="http://orasoft.oracleapexservices.com/apex/f?p=135:LOGIN_DESKTOP"
               target="_blank"
               ><div class="card shadow">
                 <img
@@ -193,27 +194,25 @@
                   alt="portfolio image"
                 />
                 <div class="card-footer">
-                  <p class="card-text text-dark">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
+                  <p class="card-text text-dark">Ora POS (Point Of Sales).</p>
                 </div>
               </div></a
             >
           </div>
 
           <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
-            <a href="#" target="_blank"
+            <a
+              href="http://orasoft.oracleapexservices.com/apex/r/orasoft62/survey/login"
+              target="_blank"
               ><div class="card shadow">
                 <img
-                  src="./assets/images/Leave.png"
+                  src="./assets/images/Survey.png"
                   class="card-img-top"
                   alt="portfolio image"
                 />
                 <div class="card-footer">
                   <p class="card-text text-dark">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
+                    Online Survey Management System.
                   </p>
                 </div>
               </div></a
@@ -230,8 +229,7 @@
                 />
                 <div class="card-footer">
                   <p class="card-text text-dark">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
+                    Some Project's Landing Page.
                   </p>
                 </div>
               </div></a
@@ -250,13 +248,19 @@
                 />
                 <div class="card-footer">
                   <p class="card-text text-dark">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
+                    Book Library Management System.
                   </p>
                 </div>
               </div></a
             >
           </div>
+          <p>
+            Description: I have built this project with the Frontend: Oracle
+            Application Express (APEX) & Backend: Oracle Database 19c. I
+            maintained all standard procedure that required for developing a
+            standard Software. My project login credential > User: ADMIN &
+            Password: 123
+          </p>
         </div>
       </div>
     </section>
