--- a/index.html
+++ b/index.html
@@ -477,7 +477,15 @@
           <div class="row mt-3 d-none">
             <div class="col-md-6">
               <div class="shadow p-5">
-                <h3>Assistant Programmer, IT</h3>
+                <h3> Assistant Manager, IC&T</h3>
+                <p>
+                  Navana Welding Electrode Ltd <br />
+                  01-10-2024 To Continuing
+                </p>
+              </div>
+                    <div class="col-md-6">
+              <div class="shadow p-5">
+                <h3>Programmer, IT</h3>
                 <p>
                   STAR Porcelain Limited <br />
                   02-04-2022 To Continuing
