--- a/index.html
+++ b/index.html
@@ -475,11 +475,11 @@
 
           <!-- experiences start -->
           <div class="row mt-3 d-none">
-            <div class="col-md-6">
+            <div class="col-md-12">
               <div class="shadow p-5">
                 <h3> Assistant Manager, IC&T</h3>
                 <p>
-                  Navana Welding Electrode Ltd <br />
+                  Navana Welding Electrode Limited<br />
                   01-10-2024 To Continuing
                 </p>
               </div>
