--- a/index.html
+++ b/index.html
@@ -90,20 +90,13 @@
               <h2 class="fw-bold display-4">Hi, I'm</h2>
               <p class="fw-bold display-5">Abdullah Al Mamun</p>
               <p class="display-6">
-                a Developer. Professional Coder. UI/UX Designer.&nbsp;
+                Oracle APEX Developer | SQL & PL/SQL Programmer | Database Application Specialist.&nbsp;
               </p>
             </div>
             <div class="mb-5">
               <p class="lead">
-                To work as a Software Developer applying my knowledge in the
-                field of testing, designing, and maintenance to cater to the
-                specific needs of the people. I wish to work in a team of
-                motivated individuals who want to work towards advancing the
-                company and its goals. My passion is about implementing and
-                launching new projects. Strong in design and integration with
-                intuitive problem-solving skills. Proficient in SQL, PL/SQL,
-                MySQL, JAVASCRIPT, HTML, CSS, Bootstrap, Oracle Apex and
-                WordPress.
+               I build modern and scalable web applications using Oracle APEX, SQL, PL/SQL, and Oracle Database.
+          I specialize in form automation, workflows, dashboards, authentication, authorization, and database-driven systems..
               </p>
             </div>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
